k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: flask-app
spec:
  replicas: 3  # Number of pods to run
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: eyalmr1/flask-multi-stage-app:latest  # Change this to your DockerHub or ECR URL
        ports:
        - containerPort: 5000
